--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
-body {
-  background-color: bisque;
+* {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-family: 'Courier New', Courier, monospace;
+  letter-spacing: normal;
 }
 
-.hello {
-  color: red;
-}
