--- a/src/style.css
+++ b/src/style.css
@@ -2,20 +2,23 @@
   margin: 0;
   padding: 0;
   font-weight: normal;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Arial, 'Courier New', Courier, monospace;
   letter-spacing: normal;
 }
 
 #main-container {
-  border: 1px solid grey;
   width: 55%;
   margin: 3rem auto;
-  border-bottom: none;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.336);
 }
 
 #main-container > *,
 .list-items-c {
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.445);
+}
+
+.list-items-c:nth-child(1) {
+  border-top: 1px solid rgba(128, 128, 128, 0.445);
 }
 
 #main-c-head {
@@ -25,11 +28,10 @@
 }
 
 #to-do-input {
-  width: 100%;
-  border-top: 1px;
-  border-left: 1px;
-  border-right: 1px;
-  padding: 1rem 0 1rem 1rem;
+  width: fit-content;
+  padding: 1rem;
+  border: none;
+  font-style: italic;
 }
 
 .list-items-c {
@@ -37,4 +39,17 @@
   justify-content: space-between;
   padding: 0.6rem;
   align-items: center;
+}
+
+.list-items-c div {
+  display: flex;
+  align-items: center;
+  gap: 0.65rem;
+}
+
+#clear-completed {
+  text-align: center;
+  padding: 1rem;
+  color: rgba(128, 128, 128, 0.76);
+  background-color: rgba(204, 204, 204, 0.20);
 }
