Start function to remove items from list

--- a/src/style.css
+++ b/src/style.css
@@ -66,3 +66,11 @@ Classes to add for the remove
 .line-through {
   text-decoration: line-through;
 }
+
+.edit-background {
+  background-color: rgb(243, 243, 0);
+}
+
+.fa-trash-can {
+  display: none;
+}
