Work in the remove feature in the js file

--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,7 @@ Classes to add for the remove
   text-decoration: line-through;
 }
 
-.edit-background {
+.new-background {
   background-color: rgb(243, 243, 0);
 }
 
