Change Color when P tag is clicked

--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,7 @@ Classes to add for the remove
 }
 
 .new-background {
-  background-color: rgb(243, 243, 0);
+  background-color: #fffed3;
 }
 
 .fa-trash-can {
