--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,19 +6,62 @@
   letter-spacing: normal;
 }
 
+i {
+  cursor: pointer;
+}
+
+body {
+  background-color: rgb(153, 153, 181);
+}
+
+/*
+  Styles of the main container
+*/
 #main-container {
-  width: 55%;
+  width: 60vw;
+  max-width: 450px;
   margin: 3rem auto;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.336);
 }
 
-#main-container > *,
+#main-container>*,
 .list-items-c {
   border-bottom: 1px solid rgba(128, 128, 128, 0.445);
 }
 
-i {
-  cursor: pointer;
+/*
+  Styles of the header
+*/
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.form {
+  position: relative;
+  width: 100%;
+
+  &__input {
+    width: 100%;
+    padding: 1rem;
+    border: none;
+    outline: none;
+    font-style: italic;
+    font-size: 0.8rem;
+  }
+
+
+  &__btn {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    padding-right: 1rem;
+  }
 }
 
 .list-items-c {
@@ -30,21 +73,6 @@ i {
 
 .list-items-c:nth-child(1) {
   border-top: 1px solid rgba(128, 128, 128, 0.445);
-}
-
-#main-c-head {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-}
-
-#to-do-input {
-  width: 95%;
-  padding: 1rem;
-  border: none;
-  font-style: italic;
-  padding-right: 0;
-  margin-right: 0;
 }
 
 .to-do-des {
