--- a/src/styles/background.scss
+++ b/src/styles/background.scss
@@ -1,3 +1,6 @@
+/* stylelint-disable declaration-block-no-duplicate-properties */
+/* stylelint-disable at-rule-no-unknown */
+/* stylelint-disable csstree/validator */
 body {
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   height: 100vh;
@@ -64,6 +67,7 @@ $shooting-time: 3000ms;
   @for $i from 1 through 20 {
     &:nth-child(#{$i}) {
       $delay: random(9999) + 0ms;
+
       top: calc(50% - #{random(400) - 200px});
       left: calc(50% - #{random(300) + 0px});
       animation-delay: $delay;
